--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/beakerImage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="true"
@@ -12,8 +11,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.druidpyrcel.biotech.finaldilution.MainActivity"
+    tools:showIn="@layout/activity_edit">
 
     <ListView
         android:id="@+id/compoundsListView"
@@ -48,6 +47,7 @@
                 android:id="@+id/beaker"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@+id/fromEditToPreparebutton"
                 android:layout_below="@+id/volumeViewSwitcher"
                 android:contentDescription="@string/beakerDescription"
                 android:src="@drawable/beaker" />
@@ -75,6 +75,17 @@
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
             </ViewSwitcher>
+
+            <Button
+                android:id="@+id/fromEditToPreparebutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:text="@string/FromEditToPrepButtonText" />
 
         </RelativeLayout>
 
