--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -29,7 +29,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/compoundsTextView"
+            android:id="@+id/componentsTextView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".5"
