--- a/app/src/main/res/layout/content_prep.xml
+++ b/app/src/main/res/layout/content_prep.xml
@@ -12,4 +12,13 @@
     tools:context="com.druidpyrcel.biotech.finaldilution.PrepActivity"
     tools:showIn="@layout/activity_prep">
 
+    <Button
+        android:id="@+id/fromPrepToEditButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/fromPrepToEditButtonText" />
+
 </RelativeLayout>
