--- a/app/src/main/res/layout/content_prep.xml
+++ b/app/src/main/res/layout/content_prep.xml
@@ -21,4 +21,12 @@
         android:layout_alignParentStart="true"
         android:text="@string/fromPrepToEditButtonText" />
 
+    <ListView
+        android:id="@+id/checklist_listView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
 </RelativeLayout>
