--- a/app/src/main/res/layout/activity_prep.xml
+++ b/app/src/main/res/layout/activity_prep.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.druidpyrcel.biotech.finaldilution.PrepActivity">
+    tools:context="com.druidpyrcel.biotech.finaldilution.view.PrepActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
