--- a/app/src/main/res/layout/content_prep.xml
+++ b/app/src/main/res/layout/content_prep.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.druidpyrcel.biotech.finaldilution.PrepActivity"
+    tools:context="com.druidpyrcel.biotech.finaldilution.view.PrepActivity"
     tools:showIn="@layout/activity_prep">
 
     <Button
