--- a/app/src/main/res/layout/content_startup.xml
+++ b/app/src/main/res/layout/content_startup.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.druidpyrcel.biotech.finaldilution.StartupActivity"
+    tools:context="com.druidpyrcel.biotech.finaldilution.view.StartupActivity"
     tools:showIn="@layout/activity_startup">
 
     <ListView
