--- a/app/src/main/res/layout/content_compound.xml
+++ b/app/src/main/res/layout/content_compound.xml
@@ -13,6 +13,28 @@
     tools:showIn="@layout/activity_choose_compound">
 
 
+    <TextView
+        android:id="@+id/desiredConcTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/desiredConcEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Desired concentration"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/desiredConcEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/desiredConcButtonsBar"
+        android:layout_alignEnd="@+id/desiredConcTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/desiredConcTextView"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal" />
+
     <RadioGroup
         android:id="@+id/desiredConcButtonsBar"
         android:layout_width="fill_parent"
@@ -43,7 +65,7 @@
             android:button="@null"
             android:checked="true"
             android:gravity="center"
-            android:text="mol" />
+            android:text="M" />
 
         <RadioButton
             android:id="@+id/desiredMilimolarConcButton"
@@ -53,7 +75,7 @@
             android:background="@drawable/button_states"
             android:button="@null"
             android:gravity="center"
-            android:text="mmol" />
+            android:text="mM" />
 
         <RadioButton
             android:id="@+id/desiredMgMlConcButton"
@@ -65,28 +87,6 @@
             android:gravity="center"
             android:text="mg/ml" />
     </RadioGroup>
-
-    <EditText
-        android:id="@+id/desiredConcEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/desiredConcButtonsBar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:ems="10"
-        android:inputType="number" />
-
-    <TextView
-        android:id="@+id/desiredConcTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/desiredConcEditText"
-        android:layout_alignEnd="@+id/desiredConcEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/desiredConcEditText"
-        android:text="Desired concentration"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <View
         android:id="@+id/secondView"
@@ -123,10 +123,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/stockConcButtonsBar"
+        android:layout_alignEnd="@+id/stockConcTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/stockConcTextView"
         android:clickable="false"
         android:ems="10"
+        android:imeOptions="actionDone"
         android:inputType="number"
         android:visibility="invisible" />
 
@@ -159,7 +162,7 @@
             android:background="@drawable/button_states"
             android:button="@null"
             android:gravity="center"
-            android:text="mol"
+            android:text="M"
             android:visibility="invisible" />
 
         <RadioButton
@@ -170,7 +173,7 @@
             android:background="@drawable/button_states"
             android:button="@null"
             android:gravity="center"
-            android:text="mmol"
+            android:text="mM"
             android:visibility="invisible" />
 
         <RadioButton
