--- a/app/src/main/res/layout/content_compound.xml
+++ b/app/src/main/res/layout/content_compound.xml
@@ -33,7 +33,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/desiredConcTextView"
         android:imeOptions="actionDone"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:selectAllOnFocus="true" />
 
     <RadioGroup
         android:id="@+id/desiredConcButtonsBar"
@@ -131,6 +132,7 @@
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="number"
+        android:selectAllOnFocus="true"
         android:visibility="invisible" />
 
     <RadioGroup
