--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -14,12 +14,28 @@
     tools:context="com.druidpyrcel.biotech.finaldilution.view.EditActivity"
     tools:showIn="@layout/activity_edit">
 
-    <ListView
-        android:id="@+id/compoundsListView"
+
+    <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:choiceMode="multipleChoice" />
+        android:layout_height="match_parent"
+        android:layout_weight=".5">
+
+        <ListView
+            android:id="@+id/compoundsListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/newCompoundButton"
+            android:choiceMode="multipleChoice" />
+
+        <Button
+            android:id="@+id/newCompoundButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/buttonNewCompound" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="0dp"
