--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -75,13 +75,34 @@
                 android:layout_gravity="start|top">
 
 
-                <EditText
-                    android:id="@+id/beakerVolumeEditText"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:focusableInTouchMode="true"
-                    android:inputType="numberDecimal"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <EditText
+                        android:id="@+id/beakerVolumeEditText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_toLeftOf="@+id/textView"
+                        android:layout_toStartOf="@+id/textView"
+                        android:focusableInTouchMode="true"
+                        android:inputType="numberDecimal"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:gravity="center_vertical"
+                        android:text="@string/mililiters"
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/beakerVolumeTextView"
