--- a/app/src/main/res/layout/content_compound.xml
+++ b/app/src/main/res/layout/content_compound.xml
@@ -209,4 +209,12 @@
         android:layout_alignParentStart="true"
         android:text="CANCEL" />
 
+    <Button
+        android:id="@+id/buttonAddCompoundDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/buttonAddCompoundDone"
+        android:layout_centerHorizontal="true"
+        android:text="DELETE" />
+
 </RelativeLayout>
