--- a/app/src/main/res/layout/content_startup.xml
+++ b/app/src/main/res/layout/content_startup.xml
@@ -1,32 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.druidpyrcel.biotech.finaldilution.view.StartupActivity"
     tools:showIn="@layout/activity_startup">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="190"
+        android:background="@color/gray">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/title_activity_startup"
+            android:id="@+id/textView2"
+            android:typeface="sans"
+            android:textStyle="bold"
+            android:textColor="@color/light_blue"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/solutionListView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/addNewSolutionButton" />
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="650"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        />
 
-    <Button
-        android:id="@+id/addNewSolutionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/solutionListView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/solutionListView"
-        android:text="@string/add_new_solution_button_text" />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="208"
+        android:background="@color/gray">
+
+        <Button
+            android:id="@+id/addNewSolutionButton"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="@string/add_new_solution_button_text"
+            android:background="@drawable/rounded_button"
+            android:textColor="@color/white"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            style="@style/Base.Widget.AppCompat.ImageButton"
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+</LinearLayout>
