--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,10 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.druidpyrcel.biotech.finaldilution.view.EditActivity"
-    tools:showIn="@layout/activity_edit">
-
+    tools:context="com.druidpyrcel.biotech.finaldilution.view.EditActivity">
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -41,6 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_weight=".5"
         android:orientation="vertical">
 
