--- a/app/src/main/res/layout/content_startup.xml
+++ b/app/src/main/res/layout/content_startup.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.druidpyrcel.biotech.finaldilution.view.StartupActivity"
-    tools:showIn="@layout/activity_startup">
+    tools:context="com.druidpyrcel.biotech.finaldilution.view.StartupActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -54,7 +51,6 @@
             android:background="@drawable/rounded_button"
             android:textColor="@color/white"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            style="@style/Base.Widget.AppCompat.ImageButton"
             android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
