--- a/app/src/main/res/layout/content_compound.xml
+++ b/app/src/main/res/layout/content_compound.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.druidpyrcel.biotech.finaldilution.view.CompoundActivity">
+    tools:context=".concentration.view.CompoundActivity">
 
     <TextView
         android:id="@+id/desiredConcTextView"
