--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.druidpyrcel.biotech.finaldilution.view.EditActivity">
+    tools:context=".solution.view.EditActivity">
 
     <RelativeLayout
         android:layout_width="0dp"
