--- a/app/src/main/res/layout/content_edit.xml
+++ b/app/src/main/res/layout/content_edit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".5"
+            android:focusable="true"
             android:clickable="true">
 
             <ImageView
@@ -35,7 +36,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/fromEditToPreparebutton"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:contentDescription="@string/beakerDescription"
                 android:src="@drawable/beaker" />
@@ -45,11 +45,9 @@
                 android:layout_width="121dp"
                 android:layout_height="46dp"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
-                android:layout_marginEnd="96dp"
-                android:layout_marginRight="96dp">
+                android:layout_marginEnd="96dp">
 
 
                 <RelativeLayout
@@ -61,7 +59,6 @@
                         android:id="@+id/beakerVolumeEditText"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:layout_toLeftOf="@+id/textView"
                         android:layout_toStartOf="@+id/textView"
                         android:focusableInTouchMode="true"
                         android:gravity="end"
@@ -74,7 +71,6 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
                         android:gravity="center_vertical"
                         android:text="@string/mililiters"
@@ -100,27 +96,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:text="@string/FromEditToPrepButtonText" />
-
-            <Button
-                android:id="@+id/addCompoundButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/beaker"
-                android:layout_centerHorizontal="true"
-                android:text="+" />
 
         </RelativeLayout>
 
 
     </LinearLayout>
 
-    <fragment
-        android:id="@+id/compoundsFragment"
-        class="com.labessence.biotech.finaldilution.compound.view.CompoundsPanel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom" />
+    <include layout="@layout/compound_list" />
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
