--- a/app/src/main/res/layout/content_startup.xml
+++ b/app/src/main/res/layout/content_startup.xml
@@ -10,21 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="190"
-        android:background="@color/gray">
+        android:background="@color/grey2">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/title_activity_startup"
             android:id="@+id/textView2"
-            android:typeface="sans"
-            android:textStyle="bold"
-            android:textColor="@color/light_blue"
-            android:layout_marginLeft="50dp"
+            style="@style/FinalDilutionH1"
             android:layout_marginStart="50dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
     </RelativeLayout>
 
@@ -41,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="208"
-        android:background="@color/gray">
+        android:background="@color/grey2">
 
         <Button
             android:id="@+id/addNewSolutionButton"
