--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
-    <color name="gray">#F2F2F2</color>
+    <color name="grey1">#EDEDED</color>
+    <color name="grey2">#F2F2F2</color>
     <color name="light_blue">#66E2FF</color>
 </resources>
