--- a/app/src/main/res/layout/compound_list.xml
+++ b/app/src/main/res/layout/compound_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/compoundsList"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:background="#00ffffff"
     android:elevation="40dp"
     app:behavior_hideable="false"
-    app:behavior_peekHeight="54dp"
+    app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <com.labessence.biotech.finaldilution.compound.view.AddCompoundButtonView
@@ -44,4 +44,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compoundsListTitle" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
